# oneliner

./: Cargo.toml  oneliner.conf  pyproject.toml  readme.md  release.yml
.github/workflows/: release.yml
oneliner/: config.py  oneliner.py
src/: config.rs  main.rs
