
[tool.poetry]
name = "oneliner"
version = "0.3.0"
description = "A static site generator"
authors = ["Marcus Kazmierczak <marcus@mkaz.com>"]
license = "MIT"
readme = "readme.md"
keywords = ["text list"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10"
appdirs = ">=1.4"
pre-commit = "^3.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
mypy = "^1.0.1"

[tool.poetry.scripts]
oneliner = 'oneliner.oneliner:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
pythonpath = "oneliner"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py310"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "toml",
]
ignore_missing_imports = true
